reworked a few things

--- a/www/index.html
+++ b/www/index.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Example App</title>
+    <title>Contractor's Work Log</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 <h1>CWorkLog</h1>
 <div id="message"></div>
+<div id="login">
 <label>Username: <input id="user" type="text"></label><br>
 <label>Password: <input id="pass" type="password"></label><br>
-<button id="fetch" disabled>Fetch tasks</button>
+<button id="fetch" disabled>Login</button>
+</div>
 <button id="upload" disabled>Upload times</button>
 <button id="local" disabled>Local timelog</button>
 <hr>
@@ -19,7 +21,7 @@
     <ul id="list"></ul>
 </div>
 <div id="current" class="hide"></div>
-<button id="stop" class="hide">Stop</button>
+<button id="stop" class="hide stopButton">Stop</button>
 <div id="timelogs" class="hide">
     <ul id="timelogs-list"></ul>
     <button id="timelogs-close">Close</button>
