several design changes

--- a/www/index.html
+++ b/www/index.html
@@ -26,6 +26,11 @@
     <ul id="timelogs-list"></ul>
     <button id="timelogs-close">Close</button>
 </div>
+
+ <div class="image_links">
+  <a target="_blank" title="Clients" href="companies.php"><img style="width:24px;" src="images/clients_dk_26x26.png"/></a>
+ </div>
+
 <script src="js/app.js"></script>
 </body>
 </html>
