--- a/www/index.html
+++ b/www/index.html
@@ -4,6 +4,9 @@
     <title>Contractor's Work Log</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/jquery.mobile-1.3.0-rc.1.min.css">
+    <link rel="stylesheet" href="css/smoothness/jquery-ui-1.10.1.custom.min.css">
+    <link rel="stylesheet" href="css/jquery.ui.sliderbutton.css">
 </head>
 <body>
 <h3>Contractor's Work Log</h3>
@@ -35,13 +38,21 @@
     <ul id="list"></ul>
 </div>
 <div id="current" class="hide"></div>
-<button id="stop" class="hide">Stop</button>
+
+<div id="stopSliderContainer" class="containing-element" style="display: none">
+	<div id="sldStop" style="width: 100%"></div>
+</div>
+
 <div id="timelogs" class="hide">
     <ul id="timelogs-list"></ul>
     <button id="timelogs-close">
         <i class="icon-ok"></i> Close
     </button>
 </div>
+<script src="js/jquery-1.9.1.min.js"></script>
+<script src="js/jquery.mobile-1.3.0-rc.1.min.js"></script>
+<script type="text/javascript" src="js/jquery-ui-1.10.1.custom.min.js"></script>
+<script type="text/javascript" src="js/jquery.ui.sliderbutton.js"></script>
 <script src="js/app.js"></script>
 </body>
 </html>
