--- a/www/index.html
+++ b/www/index.html
@@ -40,7 +40,8 @@
 <div id="current" class="hide"></div>
 
 <div id="stopSliderContainer" class="containing-element" style="display: none">
-	<div id="sldStop" style="width: 100%"></div>
+   <div id="toggle-stop" class="switch"><div style="left: 100px" class="on"></div></div>   
+   <!-- <div id="sldStop" style="width: 100%"></div> -->
 </div>
 
 <div id="timelogs" class="hide">
@@ -50,9 +51,10 @@
     </button>
 </div>
 <script src="js/jquery-1.9.1.min.js"></script>
-<script src="js/jquery.mobile-1.3.0-rc.1.min.js"></script>
+
+<!-- <script src="js/jquery.mobile-1.3.0-rc.1.min.js"></script>
 <script type="text/javascript" src="js/jquery-ui-1.10.1.custom.min.js"></script>
-<script type="text/javascript" src="js/jquery.ui.sliderbutton.js"></script>
+<script type="text/javascript" src="js/jquery.ui.sliderbutton.js"></script> -->
 <script src="js/app.js"></script>
 </body>
 </html>
