fixed touch event button

--- a/www/index.html
+++ b/www/index.html
@@ -40,7 +40,7 @@
 <div id="current" class="hide"></div>
 
 <div id="stopSliderContainer" class="containing-element" style="display: none">
-   <div id="toggle-stop" class="switch"><div style="left: 100px" class="on"></div></div>   
+   <div id="toggle_running" class="switch"><div style="left: 100px" class="on"></div></div>   
    <!-- <div id="sldStop" style="width: 100%"></div> -->
 </div>
 
