--- a/www/index.html
+++ b/www/index.html
@@ -6,7 +6,11 @@
     <link rel="stylesheet" href="css/font-awesome.min.css">
     <link rel="stylesheet" href="css/jquery.mobile-1.3.0-rc.1.min.css">
     <link rel="stylesheet" href="css/smoothness/jquery-ui-1.10.1.custom.min.css">
-    <link rel="stylesheet" href="css/jquery.ui.sliderbutton.css">
+    <link rel="stylesheet" href="css/slidetounlock.css">
+    <style>
+    #slidetounlock { background: none; background-color: red; }
+    #slider {}
+    </style>
 </head>
 <body>
 <h3>Contractor's Work Log</h3>
@@ -39,9 +43,14 @@
 </div>
 <div id="current" class="hide"></div>
 
+
 <div id="stopSliderContainer" class="containing-element" style="display: none">
-   <div id="toggle_running" class="switch"><div style="left: 100px" class="on"></div></div>   
-   <!-- <div id="sldStop" style="width: 100%"></div> -->
+		 <audio id="slidetounlock_sound">
+            <source src="sounds/stoptimer.mp3">
+       </audio>
+      <div id="slidetounlock">
+			<h2><strong id="slider"></strong> <span>slide to stop timer</span></h2>
+		</div>
 </div>
 
 <div id="timelogs" class="hide">
@@ -51,10 +60,9 @@
     </button>
 </div>
 <script src="js/jquery-1.9.1.min.js"></script>
-
-<!-- <script src="js/jquery.mobile-1.3.0-rc.1.min.js"></script>
+<script src="js/jquery.mobile-1.3.0-rc.1.min.js"></script>
 <script type="text/javascript" src="js/jquery-ui-1.10.1.custom.min.js"></script>
-<script type="text/javascript" src="js/jquery.ui.sliderbutton.js"></script> -->
+<script src='js/slidetounlock.js'></script>
 <script src="js/app.js"></script>
 </body>
 </html>
