enhanced slide-to-stop

--- a/www/index.html
+++ b/www/index.html
@@ -49,7 +49,7 @@
             <source src="sounds/stoptimer.mp3">
        </audio>
       <div id="slidetounlock">
-			<h2><strong id="slider"></strong> <span>slide to stop</span></h2>
+			<h2><strong id="slider"></strong> <span style="position: relative; top: 20px; margin-top: auto; right: .3em; margin-bottom: auto; float: right;">stop</span></h2>
 		</div>
 </div>
 
