--- a/www/index.html
+++ b/www/index.html
@@ -20,7 +20,7 @@
 <a href="#pgConfig" data-mini="true" data-icon="gear" data-role="button" data-theme="b" data-inline="false">Login / Setup</a>
 
 <a href="#" id="fetch" data-mini="true" data-icon="arrow-d" data-role="button" data-theme="a" data-inline="true">Fetch</a>
-<a href="#" id="local" data-mini="true" data-icon="grid" data-role="button" data-theme="a" data-inline="true">&nbsp;</a>
+<a href="#" id="local" data-mini="true" data-icon="grid" data-role="button" data-theme="a" data-inline="true">Local</a>
 <a href="#" id="upload" data-mini="true" data-icon="arrow-u" data-role="button" data-theme="a" data-inline="true">Upload</a>
 
 <ul id="list" data-role="listview" data-divider-theme="b" data-inset="true">
@@ -61,7 +61,7 @@
        <input id="user" type="text"></label>
        <label for="pass">Password</label>
        <input id="pass" type="password"></label>
-       <a href="https://www.cworklog.com/register.php?refer=pgap">No account? Register</a>
+       <a href="https://www.cworklog.com/register.php?refer=pgap" target="_blank">No account? Register</a>
        <p><a href="#pgMain" id="setup-ok" data-direction="reverse" data-role="button" data-theme="b">OK</a></p>	
    </div>
    </div>
